--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,8 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation project(path: ':app:SignatureView')
+    implementation 'com.github.kkkknn:kkkkknSignatureView:V1.0'
 }
