--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,9 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':app:SignatureView')
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.github.kkkknn:kkkkknSignatureView:V1.0'
+    // implementation 'com.github.kkkknn:kkkkknSignatureView:V1.0'
 }
