--- a/app/SignatureView/build.gradle
+++ b/app/SignatureView/build.gradle
@@ -16,7 +16,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            buildConfigField "String", "VERSION_NAME", "\"V1.2\""
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,7 +37,7 @@ afterEvaluate {
                 // You can then customize attributes of the publication as shown below.
                 groupId = 'kkkkkn'
                 artifactId = 'kkkkknSignature'
-                version = '1.0'
+                version = '1.2'
             }
         }
     }
